fix: update dropdown background color for better contrast

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -112,10 +112,12 @@ body {
 }
 
 .uk-dropdown {
-  background: #000000;
+  background: #333333;
   color: inherit;
 }
 
+.renamePageButton,
+.dupPageButton,
 .deletePageButton {
   color: #e6e6e6;
 }
